# cabal-install-local-bug

./: .gitignore  Main.hs  bug.sh  cabal-install-local.cabal  cabal.project  shell.nix  with-3.4.sh
.github/workflows/: cabal-3.2.yml  cabal-3.4.yml
