cabal-version:       >=1.10
name:                cabal-install-local
version:             0.1.0.0
license-file:        LICENSE
author:              Peter Jones
maintainer:          pjones@devalot.com
build-type:          Simple

executable cabal-install-local
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, byline >= 1.1
  default-language:    Haskell2010
